--- a/style.css
+++ b/style.css
@@ -16,10 +16,10 @@
     background-position: center bottom;
 }
 .gameBoard #divScore{
-    width: 20vh;
+    width:20px ;
     display: flex;
     flex-direction: column;
-    background-color: white;
+    
 }
 .gameBoard #divScore .paragrafo{
     text-align: center;
@@ -28,6 +28,7 @@
     padding: 0.1rem;
     display: inline;
     width: 100%;
+    
 }
 /*------------------world---------------*/
 section.world{
