--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: normal;
 }
+.alert{
+    display: none;
+}
 .gameBoard{
     
     width: 100%;
